--- a/src/components/Calculator.scss
+++ b/src/components/Calculator.scss
@@ -18,6 +18,12 @@ $background-color: #f4f4f4;
   max-width: 412px;
   min-width: 252px;
 
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
   @media screen and (max-width: $breakpoint-mobile) {
     width: 100%;
   }
