Calculator component test

--- a/src/components/QuoteComponent.scss
+++ b/src/components/QuoteComponent.scss
@@ -1,10 +1,10 @@
 #quote {
   .quote {
-    margin-top: 24px;
+    padding: 24px 20px 20px;
     text-align: center;
-    padding: 20px;
     background-color: #f5f5f5;
     border: 1px solid #cccccc83;
+    margin: 0 12px;
 
     p {
       font-size: 1.1rem;
