--- a/src/components/Calculator.scss
+++ b/src/components/Calculator.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
-
 $breakpoint-mobile: 412px;
 $breakpoint-mid: 800px;
 $background-color: #f4f4f4;
@@ -14,11 +12,17 @@ $background-color: #f4f4f4;
 }
 
 #calc-wrapper {
+  background-color: #f5f5f5;
+  border: 1px solid #cccccc83;
+  border-radius: 5px;
+  margin: 0 12px;
+
   @media screen and (max-width: $breakpoint-mid) {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-bottom: 32px;
 
     h2 {
       align-self: flex-start;
@@ -42,7 +46,6 @@ $background-color: #f4f4f4;
   }
 
   #calc {
-    font-family: "Poppins", sans-serif;
     max-width: 412px;
     min-width: 252px;
 
