--- a/src/components/NavLinks.scss
+++ b/src/components/NavLinks.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 12px;
 
   ul {
     list-style-type: none;
@@ -10,8 +11,7 @@
     display: flex;
 
     li {
-      margin-right: 20px;
-      padding-right: 20px;
+      padding: 0 10px;
       position: relative;
 
       &:last-child {
