--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
 body {
+    font-family: "Poppins", sans-serif;
     #root {
       max-width: 1440px; 
       margin: 0 auto;
